# tippy

./: README.md
base/: CMakeLists.txt  utf8.h
core/: CMakeLists.txt
platform/windows/: .gitignore  CMakeLists.txt  main.cc
platform/windows/runtime/: CMakeLists.txt
platform/windows/runtime/lib/x64/: libGLESv2.lib
platform/windows/tools/: x64_debug_install.py
